# src/routes/consentRoutes.ts
@@ -4,6 +4,7 @@ import { ensureAuthenticated } from "../middlewares/ensureAuthenticator";
 import { CreateConsentController } from "../modules/consents/consentCases/createConsent/createConsentController";
 import { DeleteConsentByController } from "../modules/consents/consentCases/deleteConsent/DeleteConsentByController";
 import { GetByConsentController } from "../modules/consents/consentCases/getByConsent/GetByConsentController";
+import { GetByDocumentController } from "../modules/consents/consentCases/getByDocument/GetByDocumentController";
 import { GetConsentByController } from "../modules/consents/consentCases/getConsent/GetConsentByController";
 import { UpdateConsentByController } from "../modules/consents/consentCases/updateConsent/UpdateConsentByController";
 
@@ -12,11 +13,13 @@ const getConsentByController = new GetConsentByController();
 const getByConsentController = new GetByConsentController();
 const updateConsentByController = new UpdateConsentByController();
 const deleteConsentByController = new DeleteConsentByController();
+const getByDocumentController = new GetByDocumentController();
 
 const consentRoutes = Router();
 
 consentRoutes.get("/", getConsentByController.handle);
 consentRoutes.get("/:consentId", getByConsentController.handle);
+consentRoutes.get("/document/:document", getByDocumentController.handle);
 consentRoutes.post("/", ensureAuthenticated, createConsentController.handle);
 consentRoutes.put(
   "/:consentId",
